external function added

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title> HW1: J. Alsterda, first digital instrument </title>
+    <title> HW2: J. Alsterda, contingency planning </title>
   </head>
   <body><p>
-    Press buttons! Click them again and with rhythm!<br />
-    <button id ="sustain">Constant amplitude progression</button><br />
-    <button id ="beating">Beating amplitudes progression</button><br />
-    How do the higher pitches arise from quickly repeated clicks?
-    <script src="button-tone.js"></script>
+    Click to hear steering commands for an automated vehicle<br />
+    <button id ="cmpc">Contingency plan for obstacle avoidance</button><br />
+    Two plans are being maintained simulataneously:<br />
+    a nominal plan and a an emergency avoidance plan.<br />
+    They converge as the emergency occurs.
+    <script type="module" src="js/button-tone.js"></script>
+    <script type="module" src="js/load-data.js">  </script>
   </p></body>
 </html>
