--- a/hw2/index.html
+++ b/hw2/index.html
@@ -4,12 +4,18 @@
     <title> HW2: J. Alsterda, contingency planning </title>
   </head>
   <body><p>
+
     Click to hear steering commands for an automated vehicle<br />
     <button id ="cmpc">Contingency plan for obstacle avoidance</button><br />
     Two plans are being maintained simulataneously:<br />
     a nominal plan and a an emergency avoidance plan.<br />
-    They converge as the emergency occurs.
+    They converge as the emergency occurs.<br /><br />
+
+    Follow the link below to see Contingency Planning in action:<br />
+    <a href="https://www.youtube.com/watch?v=OwW9gOE-kLg">Contingency Planning for Pedestrian Avoidance</a>
+
     <script type="module" src="js/button-tone.js"></script>
-    <script type="module" src="js/load-data.js">  </script>
+    <script type="module" src="data/dataset.js">  </script>
+
   </p></body>
 </html>
