--- a/hw2/index.html
+++ b/hw2/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title> HW2: J. Alsterda, contingency planning </title>
+    <title> HW2: J. Alsterda, Contingency Planning </title>
   </head>
   <body><p>
 
     Click to hear steering commands for an automated vehicle<br />
-    <button id ="cmpc">Contingency plan for obstacle avoidance</button><br />
+
+    <button id ="dmpc"> Play FFT for nominal plan only</button><br />
+    <button id ="cmpc"> Play FFT for contingency plan only</button><br />
+    <button id ="cdmpc">Play FFT for both plans simulaneously</button><br />
+
     Two plans are being maintained simulataneously:<br />
     a nominal plan and a an emergency avoidance plan.<br />
     They converge as the emergency occurs.<br /><br />
