--- a/hw2/index.html
+++ b/hw2/index.html
@@ -4,14 +4,17 @@
     <title> HW2: J. Alsterda, Contingency Planning </title>
   </head>
   <body><p>
-    Click to hear steering command plans for my self-driving car!
-      <br />
+    Click for sonified steering command plans from a self-driving car experiment
+      <br /><br />
     <button id ="dmpc">
-      Play FFT for nominal plan only</button><br />
+      Play FFT for nominal plan only</button>
+      <br />
     <button id ="cmpc">
-      Play FFT for contingency plan only</button><br />
+      Play FFT for contingency plan only</button>
+      <br />
     <button id ="cdmpc">
-      Play FFT for both plans simulaneously</button><br />
+      Play FFT for both plans simulaneously</button>
+      <br /><br />
 
     Two plans are being maintained simulataneously:
       <br />
@@ -24,6 +27,15 @@
       <br />
     <a href="https://www.youtube.com/watch?v=OwW9gOE-kLg">
       Contingency Planning for Pedestrian Avoidance</a>
+      <br /><br />
+
+    It didn't turn out very musical, but very fun to learn how to pipe so much
+      <br />
+    data (1620 individual oscillators!) into a javascript audio context.
+      <br />
+    Now that I've worked through the coding implementation details, I hope to have
+      <br />
+    more time in future assignments to think about composition!
 
     <script type="module" src="js/main.js">
       </script>
