--- a/hw2/index.html
+++ b/hw2/index.html
@@ -36,6 +36,11 @@
     Now that I've worked through the coding implementation details, I hope to have
       <br />
     more time in future assignments to think about composition!
+      <br /><br />
+
+    Not sure what the crackling is -- maybe overloading the browser's player?
+      <br />
+    If playing this data gives your browser problems, I can reduce the size.
 
     <script type="module" src="js/main.js">
       </script>
